--- a/src/components/App.css
+++ b/src/components/App.css
@@ -779,7 +779,7 @@ h4:not(:hover) > .lang
    padding: 0 15px; border:none !important; font-weight:600; font-size:13px; cursor:pointer;}
 
 .resource > .index { width:15%; padding-top:10px; position:fixed; }
-.resource:not(.etext-view) > :not(.index) { width:85%; margin-left:15%; /*position:relative;*/ }
+.resource:not(.etext-view) > :not(.index):not(.ariane) { width:85%; margin-left:15%; /*position:relative;*/ }
 
 .resource > .ariane { position:absolute; top:105px; color: #343434; left:0; margin-left:140px;padding-left:12.125%; }
 .resource > .ariane img { display:inline-block; margin-right:5px; vertical-align: -1px;}
@@ -1907,6 +1907,8 @@ TODO
 #root > div > .resource.etext-view { padding:155px 30px; width:90%; margin:0 auto; position:relative; }
 #root > div > .resource.etext-view .data { width:100%; padding:30px; box-sizing: border-box; position:relative; }
 .resource.etext-view > :not(.index) { width:100%; padding:0; }
+
+#root > div > .resource.etext-view > .loadedContent { display:none; }
 
 #root > div > .resource.etext-view .data .etextPage { display:block; width:100%; }
 #root > div > .resource.etext-view .data .etextPage:first-child { border:none; margin-top:0; padding-top:0;}
