--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,6 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap');
 
+
+@import url(//fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap);
+
 /* CSS debug mode */
 /* * {background-color:rgba(255,0,128,0.05);}   */
 
@@ -117,11 +120,11 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    top:0;
 }
 .SearchPane #logo > div > div {
-   width:590px; height:300px; background:white;padding:20px 50px;box-sizing: border-box;
+   width:590px; height:300px; background:white;padding:30px 50px;box-sizing: border-box;
    font-size:24px;color:black;line-height:28px; text-align:left;
 }
 
-.SearchPane #logo h1 { font-size:46px; color: #152631; font-size: 46px; font-weight: 900; 
+.SearchPane #logo h1 { font-size:46px; color: #152631; font-size: 46px; font-weight: 900; font-family:"Noto Sans Tc" !important;
    /* letter-spacing: 0.65px;  */
    line-height: 53px;
     margin-top:18px; margin-bottom:14px;
@@ -171,27 +174,34 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 #clear-filters { vertical-align:-5px; margin-left: 5px; cursor:pointer; color:rgba(0,0,0,0.55)}
 
-.active-filter span { display:inline-block; padding-left:5px; font-size:11px; color:#d73449; font-weight:500; }
+.active-filter span { display:inline-block; padding-left:5px; font-size:11px; color:#d73449; font-weight:500; display: inline-flex;  }
 .active-filter { background:rgba(196, 164, 164, 0.55); padding:0 5px; border-radius: 15px; box-shadow:3px 3px 10px rgba(0,0,0,0.35);  text-transform:capitalize;
-   margin:0 10px 0 0; display:inline-block; line-height:100%;border:1px solid transparent;}
+   margin:0 10px 0 0; display:inline-block; line-height:100%;border:1px solid transparent; display: inline-flex; align-items: baseline;
+}
 .active-filter,
 .active-filter svg { font-size: 10px; vertical-align:middle; color: #152631; }
 .active-filter svg { margin-left:5px; margin-right:5px; font-size:13px; vertical-align:-3px; cursor:pointer;}
 .active-filter.exclu { border:1px solid rgba(229, 74, 53,0.65); text-decoration:line-through;text-decoration-color:rgba(229, 74, 53,1); }
 .active-filter.exclu span b span { text-decoration:line-through;text-decoration-color:rgba(229, 74, 53,1); }
 
+.active-filter > span b span { max-width:350px;text-overflow: ellipsis;overflow: hidden; white-space: nowrap; display: block; }
+
 /* .active-filter > span > span:first-child { display:none; } */
 
 .active-filter:first-child > a:last-child { opacity:0.5; pointer-events: none;  }
 
 .active-filter { font-size:0; box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); border-radius: 2px;background:white; height:28px;line-height:28px;}
+.active-filter,#clear-filters  {  margin-bottom:10px;  }
+
 .active-filter b span { color: #152631; font-size:11px; font-weight:700; padding-left:2px;}
 /* .active-filter > span > b { margin-left:10px;} */
 
-#filters-UI { padding-bottom:25px; text-align:left; background-color: #fce08e; margin-top:-5px; height:30px; }
-#filters-UI > div {  width:700px; height:40px;overflow:hidden;white-space: nowrap;position:absolute;}
+#filters-UI { padding-bottom:0px; text-align:left; background-color: #fce08e; margin-top:-5px; height:auto;}
+#filters-UI > div {  width:700px; min-height:30px; overflow:hidden; /*white-space: nowrap; position:absolute; */ max-height:120px; height:auto;
+   padding-bottom:15px;
+}
 
-#filters-UI #clear-filters { vertical-align: -8px; }
+#filters-UI #clear-filters { vertical-align:-2px; }
 #filters-UI #clear-filters > span { font-size:11px; font-weight:600;color:#4a4a4a; vertical-align: 8px; padding-right:5px; }
 
 .SearchPane:not(.resultPage) #filters-UI { display:none; }
@@ -253,14 +263,20 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .nav a { text-decoration: none; font-size:0; display:inline-block; }
 
+.nav a#about,
 .nav a > span,
 .nav #donate, 
 .nav #login { font-weight:700; font-size:14px;letter-spacing: 0.29px; text-transform: uppercase; text-decoration: none; }
 
+
+.nav a#about { color: #192229;}
+
 #login { top:0;right:0;z-index:1; display:inline-block; margin-left:auto;  color:#d73449; }
 #login button {color:rgba(0,0,0,0.54); }
 
-.nav a > span { color:#192229; display:inline-block; margin-left:200px;  }
+.nav #about  { margin-left:105px; margin-right:105px;  }
+
+.nav a > span { color:#192229; display:inline-block;   }
 
 #login span { display:inline-block; margin-left:20px; cursor:pointer; }
 
