--- a/src/components/App.css
+++ b/src/components/App.css
@@ -129,9 +129,15 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    line-height: 53px;
     margin-top:18px; margin-bottom:14px;
 }
-.SearchPane #logo h1 + span {
+.SearchPane #logo h1 + div {
+   font-weight:500;
+   margin-bottom:15px;
+}
+.SearchPane #logo h1 ~ span {
    color: #4a4a4a;
    font-size: 16px;
+   line-height:22px;
+   display:block;
    font-weight: 400;
    /* letter-spacing: 0.31px; */
 }
@@ -259,7 +265,10 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .nav > div > div > a > img { vertical-align: middle;}
 
-.nav #logo a:first-child { display: inline-block; margin-right:30px; }
+.nav #logo { display:flex; align-items:center;}
+
+.nav #logo a { display: inline-block; margin-right:20px; }
+.nav #logo a:first-child span { font-size:24px; font-weight:500;}
 
 .nav a { text-decoration: none; font-size:0; display:inline-block; }
 
@@ -269,12 +278,13 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 .nav #login { font-weight:700; font-size:14px;letter-spacing: 0.29px; text-transform: uppercase; text-decoration: none; }
 
 
-.nav a#about { color: #192229;}
+.nav a#about { color: hsl(206, 24%, 13%);}
 
 #login { top:0;right:0;z-index:1; display:inline-block; margin-left:auto;  color:#d73449; }
 #login button {color:rgba(0,0,0,0.54); }
 
-.nav #about  { margin-left:105px; margin-right:105px;  }
+.nav #logo + a { margin-left:150px; }
+/* .nav #about  { margin-left:105px; margin-right:105px;  } */
 
 .nav a > span { color:#192229; display:inline-block;   }
 
@@ -363,14 +373,14 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 #samples { width: 960px; margin-right:40px; /*margin: auto;*/ text-align: left; z-index: 0; padding:30px;background:white; display:block;
    padding-left:16px; padding-right:16px; padding-bottom:140px; max-width:100%;box-shadow: 0 2px 10px #e2e2e2; box-sizing:border-box;
 }
-#samples { padding-bottom: 40px ; width:910px;margin-right:0px;padding-left:37px;}
-#samples h3 { text-transform: uppercase; text-align: center;}
+#samples { padding-bottom: 40px ; width:910px;margin-right:0px; /*padding-left:37px; */}
+#samples h3 { text-transform: uppercase; text-align: center; font-size:23px;}
 
 #res-container > ul li { padding-left:0; pointer-events:none; }
 #res-container > ul h4 { padding-left:22px;; }
 #res-container > ul h4 { color:#343434; font-size:24px; /*font-family:"Noto Sans";*/ font-weight:900; text-transform:uppercase;}
 
-#res-container #samples > h4 { padding-left:0; }
+#res-container #samples > h4 { padding-left:0; font-size:18px; text-transform: none;  font-weight:500; text-align:center; }
 
 /* .SearchPane.resultPage #res-container { padding-top:70px;} */
 
