--- a/src/components/App.css
+++ b/src/components/App.css
@@ -120,14 +120,13 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    top:0;
 }
 .SearchPane #logo > div > div {
-   width:590px; height:300px; background:white;padding:30px 50px;box-sizing: border-box;
-   font-size:24px;color:black;line-height:28px; text-align:left;
+   width:590px; height:300px; background:white;padding:0px 50px;box-sizing: border-box;
+   font-size:24px;color:black;line-height:28px; display:flex; flex-direction: column; justify-content: center; align-items: flex-start;
 }
 
 .SearchPane #logo h1 { font-size:46px; color: #152631; font-size: 46px; font-weight: 900; font-family:"Noto Sans Tc" !important;
    /* letter-spacing: 0.65px;  */
-   line-height: 53px;
-    margin-top:18px; margin-bottom:14px;
+   line-height: 53px;margin-top:0; margin-bottom:14px;text-align: left;;
 }
 .SearchPane #logo h1 + div {
    font-weight:500;
@@ -139,6 +138,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
    line-height:22px;
    display:block;
    font-weight: 400;
+   text-align: left;
    /* letter-spacing: 0.31px; */
 }
 
@@ -374,8 +374,8 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 #samples { width: 960px; margin-right:40px; /*margin: auto;*/ text-align: left; z-index: 0; padding:30px;background:white; display:block;
    padding-left:16px; padding-right:16px; padding-bottom:140px; max-width:100%;box-shadow: 0 2px 10px #e2e2e2; box-sizing:border-box;
 }
-#samples { padding-bottom: 40px ; width:910px;margin-right:0px; /*padding-left:37px; */}
-#samples h3 { text-transform: uppercase; text-align: center; font-size:23px;}
+#samples { padding: 20px 0 40px 0 ; width:910px;margin-right:0px; /*padding-left:37px; */}
+#samples h3 { text-transform: uppercase; text-align: center; font-size:23px;margin:10px 0;}
 
 #res-container > ul li { padding-left:0; pointer-events:none; }
 #res-container > ul h4 { padding-left:22px;; }
