--- a/src/components/App.css
+++ b/src/components/App.css
@@ -589,12 +589,17 @@ a.result + #matches .result-content #icon > :not(.thumb) img { width:40px; }
 #matches .match.publisher.en > span > span:last-child,
 #matches .match.publisher.en + .match > span > span:last-child { width:45px;}
 
-
-#matches .match.publisher > span > span:last-child::after,
-#matches .match.publisher + .match > span > span:last-child::after {  content:':';}
-
 #matches .match.publisher.bo > span > span:last-child::after,
 #matches .match.publisher.bo + .match > span > span:last-child::after {  content:''; padding-left:5px;}
+
+#matches .match.publisher.en > span > span:last-child::after,
+#matches .match.publisher.en + .match > span > span:last-child::after {  content:':';}
+
+#matches .match.publisher.zh > span > span:last-child::after,
+#matches .match.publisher.zh + .match > span > span:last-child::after {  content:'：';}
+
+#matches .match.publisher.bo > span > span + span,
+#matches .match.publisher.zh > span > span + span { padding-left:3px;text-transform: capitalize;display:inline-block;}
 
 #matches .match .assets { margin:0 4px; }
 #matches .match .assets img,
