--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2548,14 +2548,17 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .searchWidget > label + .subcollapse { width:auto !important; }
 .searchWidget > label { margin-right:5px;}
 
-.SidePane > div > .collapse > div > div > .searchWidget { padding-right:30px;}
+.SidePane > div > .collapse > div > div > .searchWidget { padding-right:0px; }
 
 .searchWidget { position:relative; }
 .searchWidget > .exclude { position:absolute;margin-left:-17px;margin-top:2px; display:none; z-index:1;top:0;left:0;width:16px;padding-left:3px; }
 .searchWidget > .exclude svg, svg.excl { font-size:12px; color:white;background-color:#d73449;border-radius:2px; cursor:pointer;}
 .exclude:hover, .searchWidget label:hover + .exclude { display:inline-block;}
 
-.widget > label { display:inline; padding-left:3px;padding-bottom:2px; z-index:0 }
+.widget > label { display:inline; padding-left:3px;padding-bottom:2px; z-index:0;  
+   /* TODO better but not perfect... */
+   padding-right:40px;margin-right:-40px; 
+}
 .widget > label > * { display:inline; vertical-align: text-top; }
 .widget > label > .checkbox { display:inline-block; width:18px !important;height:18px !important; }
 .widget > label > .checkbox > span:first-child { display:inline;  }
