--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1352,7 +1352,7 @@ vertical-align:middle;}
 
 .resource .data [data-prop="bdo:note"] .noteCollapse.in-true { overflow: visible;}
 .resource .data.ext-props [data-prop="bdo:note"] { display:flex !important; align-items: flex-start !important;}
-.resource .data > [data-prop="bdo:workHasInstance"] h4:hover .urilink .svg { background-color:rgba(220,220,220,0.5); }
+.resource .data h4:hover .svg { background-color: #ededed; }
 
 
 /* full width when hovering... */
@@ -1651,10 +1651,14 @@ span.in { font-weight:500;padding-left:0px; padding-right:10px; margin-left:36px
 .resource .data > [data-prop="bdo:workHasTranslation"] .subsubgroup h4.multiple:not(:last-child),
 .resource .data > [data-prop="bdo:workHasTranslation"] .subgroup .subsub:not(:last-child) { margin-bottom:10px;} 
 
-.urilink .svg { background-color:white; padding-right:15px;  display:inline-block;}
-.urilink svg {  display:inline-block; width:21px; opacity:1; vertical-align: -5px;}
-.urilink:hover svg path { color:#d73449; stroke:#d73449; }
-.urilink:hover svg.etext path { fill: #d73449; }
+h4 .svg { background-color:white; padding-right:15px;  display:inline-block;}
+h4 svg {  display:inline-block; width:24px; opacity:1; vertical-align: -5px;}
+h4:hover svg path { color:#d73449; stroke:#d73449; }
+h4:hover svg.image path { fill:transparent;}
+h4:hover svg.image polygon {fill:#d73449; }
+h4:hover svg.etext path { fill: #d73449; }
+
+h4 svg.image { height:21px;}
 /* .urilink:hover svg { opacity:1 } */
 
 /*
