--- a/src/components/App.css
+++ b/src/components/App.css
@@ -202,6 +202,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 .active-filter b span { color: #152631; font-size:11px; font-weight:700; padding-left:2px;}
 /* .active-filter > span > b { margin-left:10px;} */
 
+
 #filters-UI { padding-bottom:0px; text-align:left; background-color: #fce08e; margin-top:-5px; height:auto;}
 #filters-UI > div {  width:700px; min-height:30px; overflow:hidden; /*white-space: nowrap; position:absolute; */ max-height:120px; height:auto;
    padding-bottom:15px;
@@ -2588,7 +2589,7 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .searchWidget > label + .subcollapse { width:auto !important; }
 .searchWidget > label { margin-right:5px;}
 
-.SidePane > div > .collapse > div > div > .searchWidget { padding-right:0px; }
+.SidePane > div > .collapse > div > div > .searchWidget { padding-right:10px; }
 
 .searchWidget { position:relative; }
 .searchWidget > .exclude { position:absolute;margin-left:-17px;margin-top:2px; display:none; z-index:1;top:0;left:0;width:16px;padding-left:3px; }
@@ -2743,6 +2744,22 @@ svg.hide { opacity:0;pointer-events:none; }
 body {
    min-width:960px;
 }
+
+
+/* specific font sizes for tibetan */
+
+#matches > .match > span:not(.lang):not(.instance-link)[lang=bo],
+#matches .match span[lang=bo],
+#pagine[lang=bo] span,
+.searchWidget .facet-count[lang=bo],
+.searchWidget [lang=bo],
+#res-header > div .widget-header .widget-title [lang=bo],
+.SidePane.left .widget-title [lang=bo],
+.active-filter[lang=bo] span { font-size:14px;}
+.active-filter[lang=bo] { height:32px;}
+
+a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
+
 
 @media (max-width:1600px)
 {
