--- a/src/components/App.css
+++ b/src/components/App.css
@@ -416,6 +416,17 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 #samples { padding: 20px 0 40px 0 ; width:910px;margin-right:0px; /*padding-left:37px; */}
 #samples h3 { text-transform: uppercase; text-align: center; font-size:23px;margin:10px 0;}
 
+p.no-result { 
+   font-size: 16px;
+   margin: 20px 22px 0 22px;
+}
+
+.no-result #clear-filters { margin-left:0; margin-top:5px; display:flex;align-items: center;}
+.no-result #clear-filters * { color:#d73449; }
+.no-result + .no-result { margin-top:0px;}
+
+.no-result .uri-link { display:inline-block; margin-left:10px;  }
+
 .SearchPane.resultPage { overflow-y:auto;}
 
 #res-container > ul li { padding-left:0; pointer-events:none; }
@@ -2633,7 +2644,7 @@ body > .ol-li-lang:last-child li::before { content:'-';}
 .searchWidget { position:relative; }
 .searchWidget > .exclude { position:absolute;margin-left:-17px;margin-top:2px; display:none; z-index:1;top:0;left:0;width:16px;padding-left:3px; }
 .searchWidget > .exclude svg, svg.excl { font-size:12px; color:white;background-color:#d73449;border-radius:2px; cursor:pointer;}
-.exclude:hover, .searchWidget label:hover + .exclude { display:inline-block;}
+.exclude:hover, .searchWidget label:hover ~ .exclude { display:inline-block;}
 
 .widget > label { display:inline; padding-left:3px;padding-bottom:2px; z-index:0;  overflow:visible;     }
 .widget > label > * { display:inline; vertical-align: text-top; }
